add detailed detection JVM output to README for longest run analysis